<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ape="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/myos_activity_marginLeft"
            android:layout_marginTop="@dimen/myos_activity_marginTop"
            android:layout_marginBottom="@dimen/myos_activity_marginBottom"
            android:orientation="vertical">
            
            <com.ape.onelogin.myos.widget.MyOSEditText 
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                ape:maxLength="@integer/max_password_length"
                ape:showNecessary="false"
                ape:title="@string/old_password_hint"
                ape:hint="@string/old_password_hint"/>
            
            <com.ape.onelogin.myos.widget.MyOSEditText 
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                android:layout_marginTop="10dip"
                ape:maxLength="@integer/max_password_length"
                ape:showNecessary="false"
                ape:title="@string/new_password_hint"
                ape:hint="@string/ex_register_passwd_hint"
                ape:style="top"/>
            
            <com.ape.onelogin.myos.widget.MyOSEditText 
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                ape:maxLength="@integer/max_password_length"
                ape:showNecessary="false"
                ape:title="@string/ex_confirm_password"
                ape:hint="@string/ex_register_confirm_passwd_hint"
                ape:style="bottom"/>
            
            <CheckBox 
                android:id="@+id/show_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/show_password"
                android:textSize="@dimen/myos_label_text"
                android:textColor="@color/myos_label_text"
                android:button="@drawable/myos_checkbox_selector"
                android:paddingLeft="10dip"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/myos_activity_marginLeft"
            android:layout_marginRight="@dimen/myos_activity_marginRight"
            android:layout_marginTop="40dip"
            android:orientation="vertical">
            <TextView 
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/myos_warning"
                android:textSize="@dimen/myos_label_text"/>
            
            <Button 
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                android:layout_marginTop="4dip"
                android:text="@string/ok"
                android:textColor="@android:color/white"
                android:background="@drawable/myos_button_general_selector"
                android:enabled="false"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
