<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ape="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/myos_activity_paddingLeft"
    android:paddingTop="@dimen/myos_activity_paddingTop"
    android:paddingRight="@dimen/myos_activity_paddingRight"
    android:paddingBottom="@dimen/myos_activity_paddingBottom"
    android:orientation="vertical" >
    
    <com.ape.onelogin.myos.widget.MyOSEditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/myos_widget_height"
        ape:maxLength="@integer/max_account_length"
        ape:icon="@drawable/ic_account"
        ape:showNotice="false"
        ape:showNecessary="false"
        ape:title="@string/ex_account"
        ape:hint="@string/ex_account_hint"
        ape:style="top"/>
    
    <com.ape.onelogin.myos.widget.MyOSEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/myos_widget_height"
        ape:maxLength="@integer/max_password_length"
        ape:icon="@drawable/ic_password"
        ape:showNotice="false"
        ape:showNecessary="false"
        ape:title="@string/ex_password"
        ape:hint="@string/ex_password_hint"
        ape:style="bottom"/>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_marginTop="6dip"
        android:layout_gravity="center">
        
        <CheckBox 
            android:id="@+id/show_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:saveEnabled="false"
            android:text="@string/show_password"
            android:textSize="@dimen/myos_label_text"
            android:textColor="@color/myos_label_text"
            android:button="@drawable/myos_checkbox_selector"
            android:paddingLeft="10dip"/>
    
        <TextView 
            android:id="@+id/forget_passwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:text="@string/ex_forget_passwd"
            android:textColor="@drawable/myos_link_text_selector"
            android:textSize="@dimen/myos_link_text"
            android:clickable="true"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:layout_gravity="center">
        
        <TextView 
            android:id="@+id/cooperate_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="2dip"
            android:text="@string/ex_cooperate_account"
            android:textSize="@dimen/myos_label_text"
            android:textColor="@color/myos_label_text"/>
        <ImageButton 
            android:id="@+id/tencent_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/cooperate_label"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="15dip"
            android:background="@null"
            android:src="@drawable/qq"/>
        <ImageButton 
            android:id="@+id/sina_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tencent_login"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:layout_marginLeft="15dip"
            android:background="@null"
            android:src="@drawable/sina"/>
        <TextView 
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:text="@string/ex_register"
            android:textColor="@drawable/myos_link_text_selector"
            android:textSize="@dimen/myos_link_text"
            android:clickable="true"/>
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dip"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textColor="@color/myos_warning"
            android:textSize="@dimen/myos_label_text"/>
       
        <Button 
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/myos_widget_height"
            android:layout_marginTop="4dip"
            android:layout_gravity="center_horizontal"
            android:text="@string/user_login"
            android:textColor="@android:color/white"
            android:background="@drawable/myos_button_general_selector"
            android:enabled="false"/>
    </LinearLayout>
</LinearLayout>
