<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ape="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/myos_activity_marginBottom"
    android:orientation="vertical" >
    
    <com.ape.onelogin.myos.widget.MyOSActionBar 
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/myos_widget_height"
        ape:titleName="@string/pop_modify_userinfo_title"
        ape:simpleButtonName="@string/user_save"
        ape:simpleButton="false"
        ape:opetionMenu="false"/>
    <ScrollView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/user_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/myos_activity_marginLeft"
            android:layout_marginRight="@dimen/myos_activity_marginRight"
            android:paddingTop="@dimen/myos_avatar_marginTop"
            android:orientation="vertical">
            <RelativeLayout 
                android:id="@+id/avatar_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/myos_avatar_marginBottom">
                
                <com.ape.onelogin.widget.CircleImageView 
                    android:id="@+id/avatar"
                    android:layout_width="@dimen/myos_avatar_small_width"
                    android:layout_height="@dimen/myos_avatar_small_height"
                    android:background="@drawable/ic_default_avatar_man_small"
                    ape:borderWidth="0dip"
                    ape:borderColor="@color/white"/>
                <ImageButton
                    android:id="@+id/avatar_button"
                    android:layout_width="@dimen/myos_avatar_small_width"
                    android:layout_height="@dimen/myos_avatar_small_height"
                    android:background="@drawable/avatar_small_selector"/>
                <TextView 
                    android:id="@+id/edit_avatar_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/avatar"
                    android:layout_marginLeft="30dip"
                    android:gravity="center"
                    android:text="@string/ex_edit_modify_avator"
                    android:textSize="@dimen/topbar_title_text_size"/>
            </RelativeLayout>
    
            <com.ape.onelogin.myos.widget.MyOSEditText 
                android:id="@+id/nick_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                ape:maxLength="@integer/max_nickname_length"
                ape:showNotice="false"
                ape:showNecessary="false"
                ape:title="@string/nick_name_hint"
                ape:style="independent"/>
            
            <RadioGroup 
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                android:layout_marginTop="10dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dip"
                    android:text="@string/ex_gender"
                    android:textSize="@dimen/myos_label_text"
                    android:textColor="@color/myos_label_text"/>
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dip"
                    android:paddingLeft="10dip"
                    android:text="@string/ex_male"
                    android:textSize="@dimen/myos_label_text"
                    android:textColor="@color/myos_label_text"
                    android:button="@null"
                    android:saveEnabled="false"
                    android:drawableRight="@drawable/myos_checkbox_selector"
                    android:drawablePadding="10dip"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dip"
                    android:text="@string/ex_female"
                    android:saveEnabled="false"
                    android:textSize="@dimen/myos_label_text"
                    android:textColor="@color/myos_label_text"
                    android:button="@null"
                    android:drawableRight="@drawable/myos_checkbox_selector"
                    android:drawablePadding="10dip"/>
            </RadioGroup>
            
            <RelativeLayout 
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                android:layout_marginTop="10dip">
                <com.ape.onelogin.myos.widget.MyOSEditText 
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    ape:showNotice="false"
                    ape:showNecessary="false"
                    ape:title="@string/birthday_hint"
                    ape:style="top"/>
                <Button 
                    android:id="@+id/birthday_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/myos_textview_selector"/>
            </RelativeLayout>
            <com.ape.onelogin.myos.widget.MyOSEditText 
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                ape:maxLength="@integer/max_mobile_length"
                ape:showNotice="false"
                ape:showNecessary="false"
                ape:title="@string/ex_mobile"
                ape:style="middle"/>
            
            <com.ape.onelogin.myos.widget.MyOSEditText 
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                ape:maxLength="@integer/max_address_length"
                ape:showNotice="false"
                ape:showNecessary="false"
                ape:title="@string/ex_address"
                ape:style="middle"/>
            
            <com.ape.onelogin.myos.widget.MyOSEditText 
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                ape:maxLength="@integer/max_email_length"
                ape:showNotice="false"
                ape:showNecessary="false"
                ape:title="@string/ex_email"
                ape:style="bottom"/>
            
            <TextView 
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textColor="@color/myos_warning"
                android:textSize="@dimen/myos_label_text"/>
            <Button 
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="@dimen/myos_widget_height"
                android:layout_marginTop="4dip"
                android:text="@string/user_save"
                android:textColor="@android:color/white"
                android:background="@drawable/myos_button_general_selector"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
